<resources>
    <item name="imageloader_uri" type="id"/>

    <string name="app_name">宾兔兔定制</string>
    <string name="resend_identify_code">重新获取验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--tab-->
    <string name="tab_home">首页</string>
    <string name="tab_classify">分类</string>
    <string name="tab_shoe">资讯</string>
    <string name="tab_cart">购物袋</string>
    <string name="tab_mine">我的</string>

    <!--home-->
    <string name="competitive_recommand">精品推荐 Supreme</string>
    <string name="hotsell_recommand">热卖推荐 Hot Selling</string>
    <string name="search_hint">搜索</string>
    <string name="new_recommand">新品发布</string>
    <string name="good_recommand">精品推荐</string>
    <string name="hot_recommand">人气推荐</string>
    <string name="guess_recommand">猜你喜欢</string>
    <string name="look_more">更多定制</string>
    <string name="sales_volume">销量</string>
    <string name="search">搜索</string>
    <string name="shop_time">限时限量  疯狂抢购</string>
    <string name="to_end">距离本场结束  </string>
    <string name="limit_shop">限时抢购</string>
    <string name="team_shop">团购</string>
    <string name="full_off">满减专场</string>
    <string name="hot">热门</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="store_home">店铺首页</string>
    <string name="store_allproduct">全部商品</string>
    <string name="store_new">新品上架</string>
    <string name="hot_product">热卖商品</string>
    <string name="hot_personal">人气爆款</string>
    <string name="look_all">查看全部</string>
    <string name="product_classify">商品分类</string>
    <string name="history_record">历史纪录</string>
    <string name="message">消息</string>
    <string name="notice_message">通知消息</string>
    <string name="logistical_message">交易物流消息</string>
    <string name="logistical_detail">物流详情</string>
    <string name="scan_notice_down">扫描二维码登录</string>
    <string name="scan_notice_up">将二维码放图框内</string>
    <string name="scan">扫一扫</string>
    <string name="judgement">评价</string>
    <string name="make_order">确认订单</string>
    <string name="favourable_type">优惠方式</string>
    <string name="invoice_info">发票信息</string>
    <string name="choose_material">选择材质</string>
    <string name="screen">筛选</string>

    <!--scanhelp-->
    <string name="help">帮助</string>
    <string name="question1">为什么二维码扫不出来?</string>
    <string name="question1_title">以下情况可能导致失败</string>
    <string name="question1_answer1">·二维码识别度太低</string>
    <string name="question1_answer2">·二维码被制作方做了独特的处理</string>
    <string name="solution">解决方法：</string>
    <string name="solution_title">请按以下方法操作</string>
    <string name="solution1">·自带相机软件打开相机看看是否正常</string>
    <string name="solution2">·手机关机重新打开软件扫描</string>


    <!--classify-->
    <string name="classify_man">男款式</string>
    <string name="classify_woman">女款式</string>
    <string name="classify_child">儿童款</string>
    <string name="classify_sport">运动款</string>
    <string name="classify_design">设计定制</string>

    <string name="man_style">男款</string>
    <string name="woman_style">女款</string>
    <string name="child_style">童款</string>
    <string name="sport_style">运动款</string>

    <!--cart-->
    <string name="cart">购物车</string>
    <string name="no_fare">不含运费</string>
    <string name="choose_all">全选</string>

    <!--mine-->
    <string name="shoes_interset">鞋闻趣事</string>
    <string name="craftsman_interview">匠人访谈</string>
    <string name="collection_product">收藏商品</string>
    <string name="collection_store">收藏店铺</string>
    <string name="mark">足迹</string>
    <string name="look_foot_message">查看足型数据</string>
    <string name="will_judge">待评价</string>
    <string name="will_pay">待支付</string>
    <string name="will_send">待发货</string>
    <string name="will_get">待收货</string>
    <string name="order_all">全部订单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="manager_address">管理地址</string>
    <string name="info_safe">账户与安全</string>
    <string name="share_to_friend">分享给朋友</string>
    <string name="in_bintutu">入驻宾兔兔</string>
    <string name="setting">设置</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="sex1">性别：</string>
    <string name="birtday">生日：</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_modify">修改</string>
    <string name="salve">保存</string>
    <string name="find_similarity">找相似</string>
    <string name="my_collections">我的收藏</string>
    <string name="my_footprint">我的足迹</string>
    <string name="foot_message">足型数据</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="add_footmessage">添加足型数据</string>
    <string name="measure_num">测量编码：</string>
    <string name="height">身高：</string>
    <string name="age">年龄：</string>
    <string name="shoe_size">鞋码：</string>
    <string name="foot_in_out">内外翻：</string>
    <string name="instep">足弓：</string>
    <string name="recharge">充值</string>
    <string name="coupon">优惠券</string>
    <string name="points">积分</string>
    <string name="detail">明细</string>
    <string name="sum_recharge">余额充值</string>
    <string name="wallet_detail">账户明细</string>
    <string name="sum">余额</string>
    <string name="noused">未使用</string>
    <string name="hasused">已使用</string>
    <string name="haspassed">已过期</string>
    <string name="add_newaddr">添加新地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="modify_pass">修改登录密码</string>
    <string name="modify_phonenum">修改手机号码</string>
    <string name="send_code">获取验证码</string>
    <string name="store_name">商户名称</string>
    <string name="store_type">商户类型</string>
    <string name="type_personal">个人</string>
    <string name="type_mall">企业</string>
    <string name="mall_logo">商家Logo</string>
    <string name="identify">身份证件照</string>
    <string name="identify_up">+\n上传身份证正面照片</string>
    <string name="identify_down">+\n上传身份证反面照片</string>
    <string name="designe_self">自设计定制</string>
    <string name="contacts">联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="contact_email">联系邮箱</string>
    <string name="city">所在城市</string>
    <string name="enter_check">入驻验证</string>
    <string name="forget_pass">忘记密码</string>
    <string name="account_login">账号密码登录</string>
    <string name="phont_login">手机号码快捷登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="pay_sure">确认付款</string>
    <string name="pay_success">支付成功</string>
    <string name="order_detail">订单详情</string>
    <string name="evaluate_publish">发表评价</string>
    <string name="publish">发布</string>
    <string name="btn_hqyzm">%s秒</string>
    <string name="btn_againsendyzm">重新获取验证</string>
    <string name="modify_email">修改邮箱</string>
    <string name="about">宾兔兔专注于发布新品鞋类的电商平台
        /n使用更智能化的定制鞋类选品算法，导航精准，品类标准完善
        /n高度自定义的服务设定。
        /n3D扫描设计的新科技量脚体验，上门服务排队机制，
        /n以及覆盖全球各大城市、县镇、商圈、社区的
        /n专业上门服务团队。
        /n成为用户首选的鞋类购买和定制平台。</string>


    <!--orders-->
    <string name="all">全部</string>
    <string name="topay">待支付</string>
    <string name="tosend">待发货</string>
    <string name="toset">待配置</string>
    <string name="toget">待收货</string>
    <string name="tojudge">待评价</string>
    <string name="orders_all">全部订单</string>
    <string name="order_success">交易成功</string>
    <string name="have_sign">已签收</string>
    <string name="order_cancel">已取消</string>
    <string name="order_back">退货中</string>
    <string name="have_close">交易关闭</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="login_err">登录失败，请稍后重试</string>
    <string name="request_err">请求失败，请稍后重试</string>
    <string name="evaluate_err">评价失败</string>
    <string name="send_identifyingcode_err">获取验证码失败</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新 (…, &#8230;) ?</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在刷新 (…, &#8230;) ?</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <!-- 商品属性 -->
    <string name="check_attr">已选定制项</string>

</resources>
