<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhurui.bunnymall.home.activity.ScanHelpActivity"
    android:orientation="vertical"
    android:background="@color/gray_bg"
   >
    <include layout="@layout/title_noright_common" />

<LinearLayout
   style="@style/scanhelp_lin"
    android:layout_marginTop="@dimen/ui_margin_20"
    >
    <TextView
        style="@style/scanhelp_text"
        android:text="@string/question1"
        android:textSize="@dimen/font_30"
        android:textColor="@color/font_orange"/>

    <TextView
        style="@style/scanhelp_text"
        android:text="@string/question1_title"
      />
    <TextView
        style="@style/scanhelp_text"
        android:text="@string/question1_answer1"
        />
    <TextView
        style="@style/scanhelp_text"
        android:text="@string/question1_answer2"
        />
</LinearLayout>

    <LinearLayout
        style="@style/scanhelp_lin"
        >
        <TextView
            style="@style/scanhelp_text"
            android:text="@string/solution"
            android:textSize="@dimen/font_30"
            android:textColor="@color/font_orange"/>

        <TextView
            style="@style/scanhelp_text"
            android:text="@string/solution_title"
            />
        <TextView
            style="@style/scanhelp_text"
            android:text="@string/solution1"
            />

            <TextView
                style="@style/scanhelp_text"
                android:text="@string/solution2"
                />


    </LinearLayout>


</LinearLayout>
